tests/trybuild/fail/duplicate_stack_error_std.stderr
error: duplicate `#[stack_error(...)]` attribute
 --> tests/trybuild/fail/duplicate_stack_error_std.rs:6:5
  |
6 |     #[stack_error(std)]
  |     ^^^^^^^^^^^^^^^^^^^
